--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,25 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>682</width>
+    <height>470</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="iceDev">
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>50</y>
-      <width>75</width>
-      <height>23</height>
+      <y>130</y>
+      <width>46</width>
+      <height>13</height>
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QMdiArea" name="mdiArea">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>391</width>
+      <height>201</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -33,22 +43,207 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
-     <height>20</height>
+     <width>682</width>
+     <height>21</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="baseSize">
+    <size>
+     <width>0</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="defaultUp">
     <bool>false</bool>
-   </attribute>
+   </property>
+   <property name="nativeMenuBar">
+    <bool>true</bool>
+   </property>
+   <widget class="QMenu" name="menuNew">
+    <property name="title">
+     <string>Widget you</string>
+    </property>
+    <widget class="QMenu" name="menuConversion">
+     <property name="title">
+      <string>&amp;Conversion</string>
+     </property>
+     <addaction name="actionTemperature"/>
+     <addaction name="actionArea"/>
+     <addaction name="actionVolume_capacity"/>
+     <addaction name="actionDistance_and_Length"/>
+     <addaction name="actionWeight_weight"/>
+    </widget>
+    <addaction name="menuConversion"/>
+    <addaction name="action_Oil_Charts"/>
+    <addaction name="action_Currency"/>
+    <addaction name="action_2"/>
+    <addaction name="separator"/>
+    <addaction name="actionAbout"/>
+   </widget>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>Tools</string>
+    </property>
+    <widget class="QMenu" name="menuLengvich">
+     <property name="title">
+      <string>&amp;Language</string>
+     </property>
+     <addaction name="actionEn"/>
+     <addaction name="actionUk"/>
+     <addaction name="actionPol"/>
+    </widget>
+    <addaction name="menuLengvich"/>
+    <addaction name="action_settings"/>
+   </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Assistance</string>
+    </property>
+    <addaction name="action_Widget_you"/>
+    <addaction name="action_5"/>
+    <addaction name="separator"/>
+    <addaction name="action_7"/>
+    <addaction name="separator"/>
+    <addaction name="action_Widget_you_2"/>
+   </widget>
+   <addaction name="menuNew"/>
+   <addaction name="menuAbout"/>
+   <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="action">
+   <property name="text">
+    <string>Личные даные</string>
+   </property>
+  </action>
+  <action name="action_2">
+   <property name="text">
+    <string>&amp;Personal data</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+X</string>
+   </property>
+  </action>
+  <action name="actionEn">
+   <property name="text">
+    <string>En</string>
+   </property>
+  </action>
+  <action name="actionUk">
+   <property name="text">
+    <string>Uk</string>
+   </property>
+  </action>
+  <action name="actionPol">
+   <property name="text">
+    <string>Pol</string>
+   </property>
+  </action>
+  <action name="action_settings">
+   <property name="text">
+    <string>&amp;Settings</string>
+   </property>
+  </action>
+  <action name="action_Widget_you">
+   <property name="text">
+    <string>&amp;Details on Widget_you</string>
+   </property>
+  </action>
+  <action name="action_5">
+   <property name="text">
+    <string>&amp;Support service</string>
+   </property>
+  </action>
+  <action name="action_7">
+   <property name="text">
+    <string>&amp;Check for updates</string>
+   </property>
+  </action>
+  <action name="action_Widget_you_2">
+   <property name="text">
+    <string>&amp;About Widget_you</string>
+   </property>
+  </action>
+  <action name="actionTemperature">
+   <property name="text">
+    <string>Temperature</string>
+   </property>
+  </action>
+  <action name="actionArea">
+   <property name="text">
+    <string>Area</string>
+   </property>
+  </action>
+  <action name="actionVolume_capacity">
+   <property name="text">
+    <string>Volume, capacity</string>
+   </property>
+  </action>
+  <action name="actionDistance_and_Length">
+   <property name="text">
+    <string>Distance and Length</string>
+   </property>
+  </action>
+  <action name="actionWeight_weight">
+   <property name="text">
+    <string>Weight, weight</string>
+   </property>
+  </action>
+  <action name="action_Oil_Charts">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Oil Charts</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+O</string>
+   </property>
+  </action>
+  <action name="action_Currency">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Currency</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+C</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>actionAbout</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>340</x>
+     <y>234</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
